@startuml Nogain
' !theme materia-outline
!theme plain

class Employee {
  - id : id
  -name : string
  -phone : string
  -cni : string
  -nif : string
  -email : string
  -birthDay: data
  -password : string
  -role : role
  -created_at: datetime
  -updated_at: datetime

  +login()
  +logOut()
  +getPersonInfoById()
  +updatePhoneNumber()
  +ViewClientList()
  +viewDiscountList()
  +viewPersonalTrainerList()

}

class Client {
  -id: id
  -nameClient: string
  -email: string
  -telephone: string
  +payMonthlyFee()
  +selectTrainningPlan()
  +selectPersonalTrainer()
  +selectDiscount()
}


class PersonalTrainer {
  -id: id
  -personalTrainerName: string
  -email:string
  -preco: number
  +updatePersonalTrainerInfo()

}


class Manager {
  +registerPersonalTrainer()
  +registerClient()
  +registerEmployee()
  +updateManagerEmail()
}


' class Employee {

'   ' +viewClientList()
'   ' +viewPersonalTrainerList()
'   ' +viewDiscountList()
' }


class Discount {
  id: id
  name: string
  description: string
  amount: float
  created_at: datetime
  updated_at: datetime
}

class TrainingPlan {
  id: id
  name: string
  description: string
  amount: float
  created_at: datetime
  updated_at: datetime
}


' class clientPersonalTrainingDiscountTrainingPlan {
'   id: id
'   client_id: id
'   personal_trainer_id: id
'   discount_id: id
'   training_plan_id: id
'   created_at: datetime
'   updated_at: datetime
' }

' class ClientHistory {
'   id: id
'   custumoer_id: id
'   person_id: id
'   total: float
'   created_at: datetime
' }






Client "1" --- "0..1" Discount
Client "1" --- "1" TrainingPlan
Client "1" --- "0..1" PersonalTrainer

' enum Role {
'   MANAGER
'   EMPLOYEE
'   CUSTOMER
' }

' Person --- Role

' confirma se inheritance or aggregation

' Person  <|--  Client
' Person  <|--  PersonalTrainer
Employee  <|--  Manager
' Person  <|--  Employee

' clientHistory <|-- Client
' clientHistory <|-- Person

' clientPersonalTrainingDiscountTrainingPlan "0...1" --- "1...*" Employee
' clientPersonalTrainingDiscountTrainingPlan "0...1" --- "1...*" PersonalTrainer
' clientPersonalTrainingDiscountTrainingPlan "0...1" --- "1...*" Discount
' clientPersonalTrainingDiscountTrainingPlan "0...1" --- "1...*" TrainingPlan
' clientPersonalTrainingDiscountTrainingPlan "0...1" --- "1...*" ClientHistory
' clientPersonalTrainingDiscountTrainingPlan "0...1" --- "1...*" Client

@enduml